--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="C://Users/5198883/Documents/2. Personal/Personal Documents/NEW CV/Sundaresh Iyer_Resume.pdf">Download CV</a>
+			<a class="downlad-btn" href="Sundaresh_Iyer.pdf">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
@@ -72,7 +72,7 @@
 				<div class="col-md-1 col-lg-2"></div>
 				<div class="col-md-10 col-lg-8">
 					<div class="intro">
-						<div class="profile-img"><img src="C:/Users/5198883/Pictures/Pictures/IMG_20190116_172647__01.jpg" alt=""></div>
+						<div class="profile-img"><img src="images/profile_1.jpg" alt=""></div>
 						<h2><b>Sundaresh Iyer</b></h2>
 						<h4 class="font-yellow">Digital Strategy Consultant</h4>
 						<ul class="information margin-tb-30">
